# rust-based-deduplicator

./: Cargo.toml  README.md  report.json
.github/workflows/: rust.yml
src/: main.rs
test_folder/: .dedup_cache.json  .quarantine_log.json
test_folder copy/: file4.txt  file5.txt
